# personalgui

./: .gitignore  README.md  personal_gui_project_proposal_revised.md  pyproject.toml  pyrightconfig.json
catalog/: .built_ids  .task_map  INDEX.md  README.md  TEMPLATE.md
catalog/auth_security/: sec_01_new-device-verification.md  sec_02_recovery-email-code.md  sec_03_new-account-two-codes.md  sec_04_choose-work-sso.md  sec_05_clarify-which-account-reset.md  sec_06_one-backup-code-no-leak.md  sec_07_authenticator-over-sms-decoy.md  sec_08_work-outlook-protected-value.md  sec_09_revoke-leaked-session.md  sec_10_approve-login-not-phishing.md  sec_11_enroll-authenticator-desktop-to-phone.md  sec_12_totp-refresh-validity-window.md
catalog/comms_messaging/: com_01_clarify_jordan_recipient.md  com_02_forward_strip_headcount.md  com_03_status_to_work_channel.md  com_04_relay_verification_code.md  com_05_authoritative_meeting_time.md  com_06_congratulate_correct_alex_morgan.md  com_07_forward_action_item_only.md  com_08_escalate_incident_manager_dm.md  com_09_reply_via_preferred_channel.md  (+2 more)
scripts/: build_catalog_index.py  run_interactive.py  run_pilot.py
tests/: oracle_helpers.py  test_authenticator_handoff.py  test_authsec_oracle.py  test_catalog_tasks.py  test_comms_oracle.py  test_finance_oracle.py  test_health_oracle.py  test_homefamily_oracle.py  test_llm_agent.py  test_media_oracle.py  test_newapp_tasks.py  test_registry_complete.py  test_scheduling_oracle.py  test_shopping_oracle.py  test_travel_oracle.py  test_validity_window.py  test_workdocs_oracle.py
(+228 files in other folders)
