[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personalgui"
version = "0.0.1"
description = "PersonalGUI: Benchmarking Personal Ecosystem Orchestration in GUI Agents."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
llm = ["openai>=1.40"]
viz = ["fastapi>=0.115", "uvicorn>=0.30"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
personalgui = ["py.typed", "viz/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
